Done according to tutorial

--- a/app.css
+++ b/app.css
@@ -159,6 +159,7 @@ body{
 .pricing-img{
     margin-bottom: 25px;
     width: 100%;
+    max-width: 400px;
 }
 
 .pricing-header{
@@ -219,4 +220,20 @@ border-top: 1px solid #e1f1ff;
 .pricing-button.is-featured:hover, .pricing-button.is-featured:focus{
     background-color: #269aff;
     color: white;
+}
+
+@media(min-width: 900px)
+{
+    .panel{
+        flex-direction: row;
+    }
+    .pricing-plan{
+        border-bottom: none;
+        border-right: 1px solid #e1f1ff;
+        padding: 25px 50px;
+    }
+    .pricing-plan:last-child{
+        border-right: none;
+
+    }
 }
