--- a/app.css
+++ b/app.css
@@ -141,11 +141,12 @@ body{
     border-radius: 10px;
     padding: 15px 25px;
     width: 100%;
-    max-width: 960px;
+    max-width: 600px;
     display: flex;
     flex-direction: column;
     text-align: center;
     text-transform: uppercase;
+    margin:20px 0;
 }
 
 .pricing-plan{
@@ -226,11 +227,13 @@ border-top: 1px solid #e1f1ff;
 {
     .panel{
         flex-direction: row;
+        max-width: 960px;
     }
     .pricing-plan{
         border-bottom: none;
         border-right: 1px solid #e1f1ff;
         padding: 25px 50px;
+
     }
     .pricing-plan:last-child{
         border-right: none;
